<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irontec.librecon.MeetingDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="32dp"
            android:background="@color/librecon_main_blue">

            <ImageView
                android:id="@+id/assistant_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/assistant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_below="@+id/assistant_picture" />

            <TextView
                android:id="@+id/assistant_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@android:color/white"
                android:layout_below="@+id/assistant_name" />

            <TextView
                android:id="@+id/assistant_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:layout_below="@+id/assistant_company" />

        </RelativeLayout>

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:spb_sections_count="4"
            app:spb_color="#e15e34"
            app:spb_speed="1.0"
            app:spb_stroke_width="4dp"
            app:spb_stroke_separator_length="4dp"
            android:visibility="invisible"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="@color/librecon_main_blue"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/moment_created_at"/>

            <TextView
                android:id="@+id/meetings_createdat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:enabled="false"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="@color/librecon_main_blue"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/moment_responded_at"/>

            <TextView
                android:id="@+id/meetings_respondedat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:enabled="false"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="@color/librecon_main_blue"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/moment_config"/>

            <CheckedTextView
                android:id="@+id/oneHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:checkMark="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/meeting_one" />


            <CheckedTextView
                android:id="@+id/halfHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:checkMark="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/meeting_half" />

            <CheckedTextView
                android:id="@+id/now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:checkMark="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/meeting_now" />

            <TextView
                android:id="@+id/meeting_shared_info"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="@color/librecon_main_blue"
                android:layout_marginBottom="10dp"
                android:text="@string/info_config"/>

            <CheckedTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:checked="true"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/info_email" />

            <TextView
                android:id="@+id/meetings_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:visibility="gone"/>

            <CheckedTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:checked="true"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/info_phone" />

            <TextView
                android:id="@+id/meetings_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rejectBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reject"
                    android:layout_margin="2dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/red_button_selector"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/acceptBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:layout_margin="2dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/blue_button_selector"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
