<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irontec.librecon.CodeActivity">

    <com.nvanbenschoten.motion.ParallaxImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/audience_blur"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icono_blanco_400" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_below="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/welcome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/anonimousButton"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_button_selector"
                android:text="@string/guest" />

            <Button
                android:id="@+id/enterButton"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_selector"
                android:text="@string/enter" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
