<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irontec.librecon.MeetingDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="32dp"
            android:background="@color/librecon_main_blue">

            <ImageView
                android:id="@+id/assistant_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/assistant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:maxLines="2"
                android:textStyle="bold"
                android:ellipsize="end"
                android:textColor="@android:color/white"
                android:layout_below="@+id/assistant_picture" />

            <TextView
                android:id="@+id/assistant_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@android:color/white"
                android:layout_below="@+id/assistant_name" />

            <TextView
                android:id="@+id/assistant_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:maxLines="1"
                android:textStyle="italic"
                android:ellipsize="end"
                android:textColor="@android:color/white"
                android:layout_below="@+id/assistant_company" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:textColor="@color/librecon_main_blue"
                android:text="@string/profile_info" />

            <TextView
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:id="@+id/assistant_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/librecon_main_blue"
                android:text="@string/profile_tags" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="none"
                android:overScrollMode="never"
                android:scrollbars="none">
                <LinearLayout
                    android:id="@+id/tagsLayout"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"/>
                </HorizontalScrollView>

            <TextView
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/librecon_main_blue"
                android:text="@string/profile_links" />

            <LinearLayout
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:id="@+id/linksLayout"
                android:clickable="false"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"/>

            <Button
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:id="@+id/send_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_request"
                android:layout_margin="2dp"
                android:textColor="@android:color/white"
                android:background="@drawable/green_button_selector"
                android:layout_weight="1"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
